clusters/on-prem/core/goldilocks/ingress.sops.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: goldilocks-ingress
    namespace: goldilocks
    annotations:
        kubernetes.io/ingress.class: traefik
        cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
    tls:
        - hosts:
            - ENC[AES256_GCM,data:EV+oy5+WQFSTNrftDUHzOf27+X8H3X3Yy7dq,iv:RFsDk1iCZy4FtQcRY+MA/qsxyCMff9/S1HswdbvcguY=,tag:4MXEENCKvL09I2WRr319VQ==,type:str]
    rules:
        - host: ENC[AES256_GCM,data:t8HbrnlcX/ABgFIm0cQ/WZ89qv0pMoznOomr,iv:+GiB65A+CJQbrbAtTtfwue86h9UhRgOBJJTLHAwoys0=,tag:4QYyp+AdXBS86/IQCn14Vg==,type:str]
          http:
            paths:
                - pathType: Prefix
                  path: /
                  backend:
                    service:
                        name: goldilocks-goldilocks-dashboard
                        port:
                            number: 80
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1xl8mrtu70kvhjdl2nva6dpt8wsy3fhmz6605fmwjujc3zztyeyzqd07nvv
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBaYTZHUlJvdmkzUzgzaFMz
[...]
            NElDVH/lrZuZpR7/Xa+/be9mi9YaSgex++IERk3nD8XsTkiI7tv13Q==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-01-28T10:53:57Z"
    mac: ENC[AES256_GCM,data:dLkwosyFl4jjBruUmci59LFXtm9qlimubpXANwpB5QyvpEGS+mi+6PuWQJwQLMf0Nkw5t0NFn4FFFEjQVT6KSVNEaf1aOAHJ4CKBbIKFJd669K5G2rhJ64ELa5a5JCFYzAIFB19uIgehxrfwlfeQ5HX/og8VVojcq48khjdi6Ug=,iv:UZuTNnA/GHmcqh7qBjp64H/VeTwwTsIIW/192k0uLP8=,tag:F9JXvADSvXwrp+OYACSERg==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|email|dnsNames|hosts|host|externalUrl)$
    version: 3.8.1
